other small fixss

--- a/pace.html
+++ b/pace.html
@@ -8,10 +8,9 @@
     </head>
     <body>
         <div class="main-container">
-            <!-- Fixed video element with correct attributes -->
             <video autoplay muted playsinline loop id="bg-video">
                 <source src="Voyagr2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
+                Something went wrong with the background video.
             </video>
             
             <div class="content-wrapper">
