etherereum execution layer

--- a/index.html
+++ b/index.html
@@ -24,71 +24,42 @@
                     <div class="cta-button">KS</div>
                 </nav>
                 <div class="main-content">
-                    <h1>Lessons Learned</h1>
+                    <h1>The Ethereum Execution Layer: A Deep Dive</h1>
                     <p>
-                        Throughout this course, I have been able to learn so much that has not only enhanced my 
-                        academic performance but also shaped my personal and professional growth. Each topic we 
-                        explored provided practical tools and strategies that I can carry forward in the future. 
-                        Reflecting on my experiences, I see how this learning has strengthened my foundation 
-                        and better prepared me for future challenges.
+                        What better topic to write about than the Ethereum network! I decided to do a deeper dive into it
+                        as I did not know much about it. After doing some research, it is pretty much a complex 
+                        system composed of layers. One that is very crucial is the Execution Layer, which is 
+                        responsible for processing all of the transactions and updating the blockchain's state. Like a Flask 
+                        based backend is the backbone of a Python application, this layer is the 
+                        backbone of Ethereum's functionality, making sure each execution of smart contracts is safe and efficient.
                     </p>
                     <p>
-                        One of the most significant lessons I learned was the importance of self-awareness and 
-                        goal-setting. Early in the course during Unit 1, I was introduced to the concept of 
-                        self-regulated learning, which helped me identify my strengths and areas for improvement. 
-                        I realized that while my motivation and metacognitive skills are strong, there is room to
-                        grow in time management and strategy development. This awareness prompted me to set clear, 
-                        actionable goals using the SMART framework in Unit 2. For example, I committed to sharpening 
-                        my computer science skills over the next two years by enrolling in advanced courses and utilizing 
-                        available resources. Establishing these goals has not only provided a sense of direction but also 
-                        a roadmap for achieving long-term success.
+                        Like I mentioned, the Execution Layer is essentially the backbone, or computational engine of Ethereum. It's where the Ethereum Virtual Machine (EVM), 
+                        a separate environment, executes smart contracts. These contracts are 
+                        deployed to the blockchain and can automate a wide range of tasks, from any kind of transfer, to any complex computations needed.
                     </p>
                     <p>
-                        Time management came up as another important theme throughout the course, especially in Unit 3. I 
-                        learned to prioritize my most important tasks—my “big rocks”—and organize my schedule around them. 
-                        This strategy has saved me countless times in balancing the demands of work, school, and personal commitments. 
-                        By creating some sort of plan and using tools to stay organized, I have been able to manage my 
-                        workload more effectively. This approach has also improved my focus and productivity, which I plan to 
-                        maintain as I continue to navigate a busy and demanding schedule.
+                        So lets say someone executes a transaction, and it is broadcast to the network. Its first validated by the Execution Layer. This whole 
+                        process involves making sure that the transaction is well-formed, has sufficient gas, which is a fee paid for that transaction, 
+                        and complies with the network's rules. Once its validated, the transaction is added to a block, which is then proposed to the network.
                     </p>
                     <p>
-                        Building relationships and seeking support were also emphasized in my time during the course. Engaging with my 
-                        success network, including peers, professors, and success coaches, underscored the value of collaboration and 
-                        communication in Unit 4. I realized that asking for help and leveraging available resources is pretty important 
-                        for overcoming any kind of challenge. For instance, conducting an informational interview with my mentor, Usman, 
-                        showed me some much into the kinds of challenges and opportunities within my career field. These 
-                        experiences have encouraged me to actively cultivate and expand my network, ensuring that 
-                        I have a strong support system to guide me through future journeys. I learned a lot from the resources, 
-                        and interview I conducted during Unit 6.
+                        Now more on the EVM. It provides a sandboxed environment where smart contracts can be executed safely and securely. 
+                        The EVM works on a stack-based architecture, using a simple instruction set to perform all necessary computations. This design allows for flexibility and
+                        scalability.
                     </p>
                     <p>
-                        Staying informed about industry trends has also been a key takeaway. My research on advancements 
-                        such as artificial intelligence, the Internet of Things (IoT), and progressive web applications 
-                        highlighted the need to remain adaptable in a rapidly changing field. These trends I found 
-                        during Unit 5 not only reflect the future of technology, but also present opportunities for professional 
-                        growth. Moving forward, I plan to continue researching emerging technologies, attending webinars, 
-                        and participating in relevant online communities to stay ahead in my ever-changing career.
+                        Ethereum 2.0 however improves upon the scalability and security of the entire network. 
+                        In this new architecture, the Execution Layer will remain responsible for its usual tasks. However, there's a new layer called the Beacon Chain, 
+                        which handles consensus and staking. The Beacon Chain coordinates the work of validators, who are responsible for validating blocks and securing the network.
                     </p>
                     <p>
-                        During Unit 7, I explored the many support services available at UMGC, such as tutoring, writing assistance, 
-                        and career counseling. Learning about these resources reminded me of the importance of seeking help when needed. 
-                        I plan to proactively use these services to address challenges in my coursework and career planning. By 
-                        utilizing these resources, I can improve my academic performance and better prepare for professional success in the future.
+                        In essence the Execution Layer is a critical component of the entire Ethereum ecosystem, and its performance 
+                        and security are essential for the success of the network itself. I'm sure as Ethereum continues to improve, 
+                        the Execution Layer will likely go under further optimizations. I could see to a poitn where the layer may become 
+                        even more efficient and capable of handling a higher volume of transactions.
                     </p>
-                    <p>
-                        Finally, the course emphasized the importance of effective communication. Learning to articulate my needs, challenges, 
-                        and goals clearly has been transformative in both academic and professional settings. Whether through written emails,
-                        or in conversations with mentors and colleagues, clear communication ensures that I advocate for myself and 
-                        build meaningful relationships. This skill will be critical as I tackle future projects and collaborate with others 
-                        to achieve shared objectives.
-                    </p>
-                    <p>
-                        This course has been an invaluable experience, equipping me with the tools and strategies needed to succeed academically and 
-                        professionally. By setting clear goals, managing my time effectively, building a strong support network, staying informed 
-                        about industry trends, and improving my communication skills, I feel confident in my ability to navigate future challenges. 
-                        These lessons have not only strengthened my foundation but also inspired me to keep going, and also a sense of purpose and direction. 
-                        As I continue my journey, I am excited to apply what I have learned and embrace the opportunities ahead.
-                    </p>
+                   
                 </div>
             </div>
         </div>
