etherereum execution layer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
-        <title>Lessons Learned: PACE Reflection</title>
+        <title>Ethereum Execution Layer</title>
     </head>
     <body>
         <div class="main-container">
@@ -18,8 +18,8 @@
                     <a href="" class="logo">PACE</a>
                     <ul class="nav-list">
                         <li>Keith</li>
-                        <li>UMGC</li>
-                        <li>Unit 8</li>
+                        <li>ETH Foundation</li>
+                        <li>Essay</li>
                     </ul>
                     <div class="cta-button">KS</div>
                 </nav>
