etherereum execution layer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             
             <div class="content-wrapper">
                 <nav class="navigation">
-                    <a href="" class="logo">PACE</a>
+                    <a href="" class="logo">ETH</a>
                     <ul class="nav-list">
                         <li>Keith</li>
                         <li>ETH Foundation</li>
